# ansible-role-nfs

./: .travis.yml  .yamllint  Makefile  README.md  pyproject.toml  requirements.txt  requirements.yml  tox.ini
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: RedHat.yml  main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  destroy.yml  molecule.yml  playbook.yml  prepare.yml  side_effect.yml  update.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
templates/: exports.j2
vars/: Archlinux.yml  Debian.yml  RedHat.yml  Ubuntu.yml
