[tool.poetry]
name = "nephelaiio.nfs"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.33.0"
ansible = "^8.6.1"
ansible-lint = { version = "^6.22.0", markers = "platform_system != 'Windows'" }
molecule-plugins = "^23.5.0"
requests = "^2.31.0"
docker = "^6.1.3"
molecule = "^6.0.2"
netaddr = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
