[tool.poetry]
name = "nephelaiio.nfs"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.6.0", markers = "platform_system != 'Windows'" }
ansible = "^10.1.0"
molecule = "^24.6.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
yamllint = "^1.35.1"
netaddr = "^1.3.0"
lxml = "^5.2.1"
libvirt-python = "^10.3.0"
github3-py = "^4.0.1"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
